[First commit] Start w. on products and orders

--- a/administrator/language/en-GB/en-GB.com_torshop.ini
+++ b/administrator/language/en-GB/en-GB.com_torshop.ini
@@ -167,6 +167,15 @@ COM_TORSHOP_NOSELECTED = "-- No selected --"
 COM_TORSHOP_CATS = "Categories of shop"
 COM_TORSHOP_CATNAME = "Category name"
 
+#PRODUCTS
+COM_TORSHOP_PRODUCTS="Products"
+COM_TORSHOP_IMAGE="Image"
+COM_TORSHOP_PRODUCTNAME="Title"
+COM_TORSHOP_PRODUCTS_ALIAS="Alias"
+
+#ORDERS
+COM_TORSHOP_ORDERS="Orders"
+
 #ABOUT
 COM_TORSHOP_INFRM = "Information"
 COM_TORSHOP_COM_COUNT = "Components"
